--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+    <title>CorsaIgnis</title>
 </head>
 <body>
-    <h1>Prueba</h1>
+    <header>
+        <div class="burguerMenu">
+            <div id="botonF1">F1</div>
+            <div id="botonMoto">MotoGP</div>
+            <div id="botonIndy">IndyCar</div>
+            <div id="botonWEC">WEC</div>
+        </div>
+        <div class="logoHeader">CORSAIGNIS</div>
+    </header>
 </body>
 </html>
